feat: clean up codebase